k8s/ms-java/03-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-java
  namespace: bci-cit-test
spec:
  selector:
    app: ms-java
  ports:
    - name: http
      port: 80
      targetPort: http
