k8s/ms-java/31-service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: ms-java-lb
  namespace: bci-cit-test
spec:
  type: LoadBalancer
  selector:
    app: ms-java
  ports:
    - name: http
      port: 80
      targetPort: http
