k8s/ms-java/40-ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ms-java
  namespace: bci-cit-test
spec:
  ingressClassName: nginx
  rules:
    - host: ms-java.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-java
                port:
                  number: 80
